[package]
name = "{{ project_name }}"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda-extension = "{{ lambda_extension_version | default: "0.11.0" }}"
serde = "1"
tokio = { version = "1", features = ["macros"] }

{% if binary_name -%}
[[bin]]
name = "{{ binary_name }}"
path = "src/main.rs"
test = false
{%- endif -%}
