[package]
name = "crate-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.5.0"
serde = "1.0.136"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"

[[bin]]
name = "crate-3"
path = "src/bin/main.rs"
test = false

[package.metadata.lambda.env]
FOO = "BAR"

[package.metadata.lambda.watch.router]
"/qux" = "crate-3"
